get destination config schema
based on destination type get the destination schema.
